exercices/ch3/ch3_2.2/manifests/todo-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      volumes: 
        - name: shared-folder
          emptyDir: {}
      containers:
        - name: todo-backend
          imagePullPolicy: Always
          image: jmandl/todo-backend:0.1
          ports:
          - containerPort: 5000
